--- a/blogpage.html
+++ b/blogpage.html
@@ -57,7 +57,7 @@ body {
       <div class="main">
         <h1 style="color: #cc10b0;">Blog Posts</h1>
         <h3>First blog post</h3>
-        <p>This is my first post.</p>
+        <p>This is my first post. This is a test.</p>
         
       <hr>
         <h4>Additional Links</h4>
