--- a/index.html
+++ b/index.html
@@ -57,7 +57,24 @@ body {
       <div class="main">
         <h1 style="color: #cc10b0;">SapperWrapper Blog</h1>
         <h2>About Me</h2>
-        <p>This is the about me section. Learn more about my awesome life.</p>
+        <p>Hello there! My name is Taylor and it is very nice to meet you. Welcome to my blog. I am basically making this as something 
+          for fun to just organize all my thoughts. I have a blog page for some articles and stories that I want to write. I have a book 
+          reviews page to share any notable books I read (I read so many it would be impossible for me to review them all). And lastly, I 
+          have a random page for any rants that I have and any random things I want to share like fun facts or arts and crafts, etc.
+          <br>
+          Soooo... about me! Like I said, my name is Taylor, and I am in college at the moment, studying engineering (not that this will 
+          have anything to do with engineering). Some of my interests include triathlon and exercise, reading (so much reading), disney 
+          movies, anything math and science-y, 3D printing, art in any form, gay rights, chocolate, and boating!
+          <br>
+          I have some contact information below if you want to stalk me or ask me out or anything *wink* *wink* (girls only). I love making 
+          little vlogs of vacations on tik tok and youtube, so you should go check them out because I think they are fun. I also linked my 
+          ao3 which is bold, but whatever I CAN DO WHAT I WANT STOP COMING FOR ME. 
+          <br>
+          Anywaysssss. I don't really know what else to say. Maybe I'll add to this as time goes on. You know, like I evolve. I'm just a 
+          little mentally ill, sexualy confused, sugar addicted little girl (not really, I am legal never fear) who wants to share her 
+          thoughts on the internet because the government's stalking us anyways!
+          <br>
+        </p>
 
         
       <hr>
