--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ body {
           <br><br>
             I have some contact information below if you want to stalk me or ask me out or anything *wink* *wink* (girls only). I love making 
           little vlogs of vacations on tik tok and youtube, so you should go check them out because I think they are fun. I also linked my 
-          ao3 which is bold, but whatever I CAN DO WHAT I WANT STOP COMING FOR ME. 
+          ao3 which is bold, but whatever I CAN DO WHAT I WANT STOP COMING FOR ME. Also I don't have an Etsy yet BUT I plan on making one 
+          to sell cool stuff because why not.
           <br><br>
             Anywaysssss. I don't really know what else to say. Maybe I'll add to this as time goes on. You know, like I evolve. I'm just a 
           little mentally ill, sexualy confused, sugar addicted little girl (not really, I am legal never fear) who wants to share her 
