--- a/blogpage.html
+++ b/blogpage.html
@@ -66,6 +66,8 @@ body {
             <br>
             Youtube: <a href="https://www.youtube.com/@sapperwrapper" target="_blank">@sapperwrapper</a>
             <br>
+            Instagram: <a href="https://www.instagram.com/taylorsapp._?igsh=ZHUxbHh2Znhpamxm&utm_source=qr" target="_blank">@taylorsapp._</a>
+            <br>
             Ao3: <a href="https://archiveofourown.org/users/mentallyfaraway" target="_blank">Mentallyfaraway</a>
             <br>
             Etsy: <a href="#" class="right">SapperWrapper</a>     
