--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
           <br><br>
             Soooo... about me! Like I said, my name is Taylor, and I am in college at the moment, studying engineering (not that this will 
           have anything to do with engineering). Some of my interests include triathlon and exercise, reading (so much reading), disney 
-          movies, anything math and science-y, 3D printing, art in any form, gay rights, chocolate, and boating!
+          movies, anything math and science-y, 3D printing, art in any form, gay rights, chocolate, lesbian music artists, and boating!
           <br><br>
             I have some contact information below if you want to stalk me or ask me out or anything *wink* *wink* (girls only). I love making 
           little vlogs of vacations on tik tok and youtube, so you should go check them out because I think they are fun. I also linked my 
@@ -84,6 +84,8 @@ body {
             Email: <a href="mailto:sapperwrapper@gmail.com">sapperwrapper@gmail.com</a>
             <br>
             Youtube: <a href="https://www.youtube.com/@sapperwrapper" target="_blank">@sapperwrapper</a>
+            <br>
+            Instagram: <a href="https://www.instagram.com/taylorsapp._?igsh=ZHUxbHh2Znhpamxm&utm_source=qr" target="_blank">@taylorsapp._</a>
             <br>
             Ao3: <a href="https://archiveofourown.org/users/mentallyfaraway" target="_blank">Mentallyfaraway</a>
             <br>
