--- a/randompage.html
+++ b/randompage.html
@@ -56,7 +56,30 @@ body {
       
       <div class="main">
         <h1 style="color: #cc10b0;">Random</h1>
-
+          <h3>7/9/2024</h3>
+          <p> So I'm starting this life helper app thingy because I was scrolling on instagram in bed and I saw an ad that said, word for word,
+            "need help getting out of bed everyday" or something like that and I felt attacked so here I am $30 later!
+            <br><br>
+              So on this first day, I am supposed to make a commitment contract. I need to visualize what my life would be like if I didn't 
+            procrastinate and how procrastination negatively affects me. Yatta yatta yatta. So I thought I'd write down my thoughts here.
+            <br><br>
+              Let's see... If I didn't put off my chores, buying food, eating food, going to work, exercising, etc. I would be living a healthier 
+            life all around. I'd be more energized, and therefore hopefully not as tired all the time. Hopefully it'll put my sleep 
+            schedule back on track, so I can actually get up in the morning, maybe get a workout in, eat a good breakfast, and go to work. 
+            Not only do I need to eat healthier, I need to eat more. I often put off buying groceries even when the store is right across 
+            the street. No groceries means no food. I know it's contributing to other aspects of my life, but I just can't seem to stop the 
+            cycle. Lastly, I need to clean more. Just need to keep my place clean instead of leaving everything to pile up.
+            <br><br>
+              I know all this is going to come down to cutting my reading time. Whenever I tell people that I read, they're always like "omg 
+            so smart" but little do they know that my binge reading is no better than their binge watching. I read on my ipad, so I'm 
+            still staring at a screen. I read into all hours of the night, so my sleep is still messed up. The only difference is that 
+            when you're watching something, you can multitask, but when you're reading something, you can't. At least not me. I don't even 
+            like to walk on the treadmill or anything when I read because I like to be in my little bed blanket cacoon. When I binge read 
+            I end up reading a book a day. It depends on the book if I can stop in the middle. Usually for romance books and such, I like 
+            to read them all the way through because I feel like I lose the magic if I sleep on it. I CAN'T LOSE THE MAGIC. I just love love. 
+            <br><br>
+              Anyways, my goals right now are to establish a proper routine for getting what I need done and eat some goddamn healthy food for once.
+          </p>
         
       <hr>
         <h4>Additional Links</h4>
