--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ body {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
 </style>
 </head>
 
@@ -91,6 +92,9 @@ body {
             <br>
             Etsy: <a href="#" class="right">SapperWrapper</a>     
         </p>
-    </div>
+    
+        <p style="background-image: url(collage.png);">
+
+        </p>
 </body>
 </html>
