--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body {
             Etsy: <a href="#" class="right">SapperWrapper</a>     
         </p>
     
-        <p style="background-image: url(collage.png);">
+        <p style="background-image: url(Collage.png);">
 
         </p>
 </body>
