--- a/index.html
+++ b/index.html
@@ -93,8 +93,6 @@ body {
             Etsy: <a href="#" class="right">SapperWrapper</a>     
         </p>
     
-        <p style="background-image: url(Collage.png);">
-
-        </p>
+        <img src="Collage.png" alt="Collage of my favorite things." width="1250" height="700">
 </body>
 </html>
