--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@ body {
             Anywaysssss. I don't really know what else to say. Maybe I'll add to this as time goes on. You know, like I evolve. I'm just a 
           little mentally ill, sexualy confused, sugar addicted little girl (not really, I am legal never fear) who wants to share her 
           thoughts on the internet because the government's stalking us anyways!
+          <br><br>
+            I added a collage of all the things I like. If I become obsessed with something else, then I'll update it. It took me hours 
+          so please appreciate!
           <br>
         </p>
 
