--- a/blogpage.html
+++ b/blogpage.html
@@ -57,8 +57,22 @@ body {
       <div class="main">
         <h1 style="color: #cc10b0;">Blog Posts</h1>
         <h3>First blog post</h3>
-        <p>This is my first post. This is a test.</p>
-        
+
+        <form action="blogcomments.php" method="POST">
+          <div>
+            <input type="email" placeholder="email@example.com" name="email" required />
+          </div>
+          <div>
+            <input type="text" placeholder="Subject" name="subject" required />
+          </div>
+          <div>
+            <textarea placeholder="Your message" name="body" required></textarea>
+          </div>
+          <div>
+            <button type="submit">Send a message</button>
+          </div>
+          </form>    
+
       <hr>
         <h4>Additional Links</h4>
         <p style="font-size: 15px;">
