--- a/blogpage.html
+++ b/blogpage.html
@@ -57,6 +57,7 @@ body {
       <div class="main">
         <h1 style="color: #cc10b0;">Blog Posts</h1>
         <h3>First blog post</h3>
+        <p>This is a test.</p>
 
         <form action="blogcomments.php" method="POST">
           <div>
