--- a/blogpage.html
+++ b/blogpage.html
@@ -67,7 +67,7 @@ body {
             <input type="text" placeholder="Subject" name="subject" required />
           </div>
           <div>
-            <textarea placeholder="Your message" name="body" required></textarea>
+            <textarea placeholder="Your comment" name="body" required></textarea>
           </div>
           <div>
             <button type="submit">Send a message</button>
