--- a/randompage.html
+++ b/randompage.html
@@ -80,6 +80,94 @@ body {
             <br><br>
               Anyways, my goals right now are to establish a proper routine for getting what I need done and eat some goddamn healthy food for once.
           </p>
+
+          <h3>Never My Little Girl</h3>
+          <h4>The Transition (from a father's perspective)</h4>
+          <p> once upon a time, my daughter was born <br>
+            the best day of my life, i thought <br>
+            my little girl <br>
+            my crying little girl <br>
+            i was overjoyed <br>
+            i vowed <br>
+            anything was hers <br>
+            everything was hers <br>
+            for her <br>
+            anything <br>
+            i vowed to raise her right <br>
+            she would never be wantin <br>
+            she would never be sad <br>
+            my little girl <br>
+            but the days passed <br>
+            and she was sad <br>
+            and she was wanting <br>
+            and one day, she died <br>
+            my little girl came to me <br>
+            and she said <br>
+            "Dad I am not your little girl" <br>
+            and so that day she died <br>
+            and so that day i mourned <br>
+            and so that day i grieved <br>
+            denial was first <br>
+            "Of course you're my little girl" <br>
+            my vow <br>
+            breaking <br>
+            my little girl <br>
+            always my little girl <br>
+            (always?) <br>
+            never <br>
+            she was never my little girl <br>
+            and she didn't die that day <br>
+            because she was never born <br>
+            my son <br>
+            my son trapped <br>
+            trapped in the body of someone he was not <br>
+            not my little girl <br>
+            but my little boy <br>
+            too much time wasted <br>
+            wasted on my little girl who never was <br>
+            i didn't understand <br>
+            i couldn't <br>
+            why had He taken my little girl from me <br>
+            anger <br>
+            denial <br>
+            anger <br>
+            sadness <br>
+            tears <br>
+            tears for my little girl <br>
+            tears for my little boy <br>
+            understanding <br>
+            anger <br>
+            why would He do this to my little boy <br>
+            why would He trap him so <br>
+            time wasted in denial <br>
+            time wasted in anger <br>
+            time wasted <br>
+            on the road to acceptance <br>
+            understanding <br>
+            my son <br>
+            my son was born and he is here <br>
+            he was always here <br>
+            and so i was wrong <br>
+            it was this day <br>
+            the birth of my son <br>
+            the happiest day of my life <br>
+            my little girl was born crying but my little boy was born smiling <br>
+            with pride <br>
+            he was no longer sad <br>
+            he was no longer wanting <br>
+            my vow fulfilled <br>
+            i was always proud <br>
+            proud of my little girl <br>
+            but prouder of my little boy <br>
+            my son who has taken on the hardest task <br>
+            the most difficult journey <br>
+            to show the world who he is inside. <br>
+            <br><br>
+            **So basically I read a book, had some thought, and decided to write them down at 3am. This was the product. I am not trans, so 
+            I have no idea what it's like. This is my take on a father who has a trans son. A father who doesn't understand, but loves 
+            his child, no matter what, as every father should. I don't fucking know. Just read it and don't judge me.**
+          <br>
+          </p>
         
       <hr>
         <h4>Additional Links</h4>
