--- a/randompage.html
+++ b/randompage.html
@@ -94,7 +94,7 @@ body {
             for her <br>
             anything <br>
             i vowed to raise her right <br>
-            she would never be wantin <br>
+            she would never be wanting <br>
             she would never be sad <br>
             my little girl <br>
             but the days passed <br>
