--- a/randompage.html
+++ b/randompage.html
@@ -139,12 +139,12 @@ body {
           the most difficult journey <br>
           to show the world who he is inside. <br>
           <br><br>
-          **So basically I read a book, had some thought, and decided to write them down at 3am. This was the product. I am not trans, so 
+          **So basically I read a book, had some thoughts, and decided to write them down at 3am. This was the product. I am not trans, so 
           I have no idea what it's like. This is my take on a father who has a trans son. A father who doesn't understand, but loves 
           his child, no matter what, as every father should. I don't fucking know. Just read it and don't judge me.**
         <br>
         </p>
-        
+        <hr>
         <h3>7/9/2024</h3>
           <p> So I'm starting this life helper app thingy because I was scrolling on instagram in bed and I saw an ad that said, word for word,
             "need help getting out of bed everyday" or something like that and I felt attacked so here I am $30 later!
