--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -56,7 +56,11 @@ body {
       
       <div class="main">
         <h1 style="color: #cc10b0;">Book Reviews</h1>
+        <p>I am working on a picture collage of all the books i've read so far. It's going to take a fuck ton of time but 
+          whatever. I've tried to keep track of them all on an app, but who knows if I've forgotten any. I might start up a goodreads 
+          account and link it below. Put all my books and book reviews on there too.
 
+        </p>
         
       <hr>
         <h4>Additional Links</h4>
