--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -58,7 +58,8 @@ body {
         <h1 style="color: #cc10b0;">Book Reviews</h1>
         <p>I am working on a picture collage of all the books i've read so far. It's going to take a fuck ton of time but 
           whatever. I've tried to keep track of them all on an app, but who knows if I've forgotten any. I might start up a goodreads 
-          account and link it below. Put all my books and book reviews on there too.
+          account and link it below. Put all my books and book reviews on there too. I have literally read so many books in the past 
+          few years that I will accidentally reread books and not even notice until I go and try to add it to my list.
 
         </p>
         
