--- a/blogpage.html
+++ b/blogpage.html
@@ -56,8 +56,10 @@ body {
       
       <div class="main">
         <h1 style="color: #cc10b0;">Blog Posts</h1>
-        <h3>First blog post</h3>
-        <p>This is a test.</p>
+ 
+        <p style="font-size: 20px;">
+          <a href="testpost.html">First Blog Post</a>
+        </p>
 
         <form action="blogcomments.php" method="POST">
           <div>
