--- a/randompage.html
+++ b/randompage.html
@@ -57,6 +57,35 @@ body {
       <div class="main">
         <h1 style="color: #cc10b0;">Random</h1>
 
+        <h3>The problem with having a vagina</h3>
+        <p>I'm reading some of the rants I've written in the past and they are so fucking funny I was very dramatic (nothing's changed) 
+          and I feel they are worthy of sharing so here's one from 2020:
+          <br><br>
+          So i threw up today. Fuck me. It sure does absolutely fucking suck to be a girl. Being born with a vagina could quite possibly 
+          have been the literal worst thing to happen to me. Today i wanted to actually shoot myself in the head and tomorrow it will 
+          probably be the same. I am not kidding. Driving home from volunteering (after leaving early because my cramps were just that bad) 
+          i was seriously debating crashing my car into a tree just so i could end my pain. I didn’t do that, clearly, as i am sitting here 
+          writing this but i am not lying when i say it was a near thing. I got home, popped in a couple pills of Midol (i already had 2 
+          Aleve this morning), tried to draw myself a hot bath (which didn’t help at all), ate one single pretzel because all i’d eaten so 
+          far was a muffin this morning, and promptly puked my guts out right there on the kitchen floor. Yay me. 
+          <br><br>
+          What even is the point of a period? Like is it just the universe making it THAT much harder to be a woman in society? I don’t 
+          get it. We have to be the ones getting all fat and carrying a child for 9 months. We have to be the ones always sexualized. We 
+          have to be the ones always told to cover up (like what the fuck? It’s literally just a fucking human body sit the fuck down Carl). 
+          We have to be the ones to have these stupid fucking periods every fucking month where we bleed nonstop for at least a couple days 
+          and have these gut-stabbing, kill-me-now cramps that seem to just never end. I missed work for this. I’ve missed school for this. 
+          If men really want to stand on their fucking soap boxes and preach how easy life is as a woman, i hope those men die a slow and 
+          painful death. Especially if you’re a rich white man standing on that pedestal, you can shut your mouth because you literally, 
+          historically have the easiest life out of anyone. Blacks are still discriminated against TO THIS DAY. Immigrants are still not 
+          considered equal TO THIS DAY. Women are still thought of as lesser than men TO THIS DAY. i’m not saying ANYONE’S life is easy 
+          because everyone has problems and obstacles to overcome. That being said, what i’m saying is that NO ONE should have the right 
+          to tell me (or anyone else) that i have it easy.
+          <br><br>
+          Look maybe i’m being a bit dramatic. Maybe i’m over exaggerating. But what-the fuck-ever. You don’t know me and i don’t know 
+          you so stay the fuck out of my business and i’ll stay out of yours. Thank you and goodbye.
+
+        </p>
+        <hr>
         <h3>Never My Little Girl</h3>
         <h4>The Transition (from a father's perspective)</h4>
         <p> once upon a time, my daughter was born <br>
