--- a/Home page/index.html
+++ b/Home page/index.html
@@ -96,6 +96,6 @@ body {
             Etsy: <a href="#" class="right">SapperWrapper</a>     
         </p>
     
-        <img src="/GitHub/sapperwrapper.github.io/Home page/Collage.png" alt="Collage of my favorite things." width="1250" height="500">
+        <img src="Collage.png" alt="Collage of my favorite things." width="1250" height="500">
 </body>
 </html>
