--- a/Book reviews/bookreviewspage.html
+++ b/Book reviews/bookreviewspage.html
@@ -48,10 +48,10 @@ body {
 
 <body>
     <div class="sidenav">
-        <a href="/GitHub/sapperwrapper.github.io/Home page/index.html">Home</a>
-        <a href="/GitHub/sapperwrapper.github.io/Blog pages/blogpage.html">Blog Posts</a>
+        <a href="index.html">Home</a>
+        <a href="blogpage.html">Blog Posts</a>
         <a href="#">Book Reviews</a>
-        <a href="/GitHub/sapperwrapper.github.io/Random/randompage.html">Random</a>
+        <a href="randompage.html">Random</a>
       </div>
       
       <div class="main">
