--- a/randompage.html
+++ b/randompage.html
@@ -48,9 +48,9 @@ body {
 
 <body>
     <div class="sidenav">
-        <a href="/GitHub/sapperwrapper.github.io/Home page/index.html">Home</a>
-        <a href="/GitHub/sapperwrapper.github.io/Blog pages/blogpage.html">Blog Posts</a>
-        <a href="/GitHub/sapperwrapper.github.io/Book reviews/bookreviewspage.html">Book Reviews</a>
+        <a href="index.html">Home</a>
+        <a href="blogpage.html">Blog Posts</a>
+        <a href="bookreviewspage.html">Book Reviews</a>
         <a href="#">Random</a>
       </div>
       
