--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ body {
 <body>
     <div class="sidenav">
         <a href="#">Home</a>
-        <a href="/GitHub/sapperwrapper.github.io/Blog pages/blogpage.html">Blog Posts</a>
-        <a href="/GitHub/sapperwrapper.github.io/Book reviews/bookreviewspage.html">Book Reviews</a>
-        <a href="/GitHub/sapperwrapper.github.io/Random/randompage.html">Random</a>
+        <a href="blogpage.html">Blog Posts</a>
+        <a href="bookreviewspage.html">Book Reviews</a>
+        <a href="randompage.html">Random</a>
       </div>
       
       <div class="main">
