--- a/blogpage.html
+++ b/blogpage.html
@@ -48,10 +48,10 @@ body {
 
 <body>
     <div class="sidenav">
-        <a href="/GitHub/sapperwrapper.github.io/Home page/index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">Blog Posts</a>
-        <a href="/GitHub/sapperwrapper.github.io/Book reviews/bookreviewspage.html">Book Reviews</a>
-        <a href="/GitHub/sapperwrapper.github.io/Random/randompage.html">Random</a>
+        <a href="bookreviewspage.html">Book Reviews</a>
+        <a href="randompage.html">Random</a>
       </div>
       
       <div class="main">
