--- a/Blog pages/testpost.html
+++ b/Blog pages/testpost.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-    <p>This is a test.</p>
+    <p>This is a test post.</p>
 <script src="https://utteranc.es/client.js"
     repo="sapperwrapper/sapperwrapper.github.io"
     issue-term="pathname"
