--- a/testpost.html
+++ b/testpost.html
@@ -1,8 +1,54 @@
 <!doctype html>
 <html>
+<head>
+<title>SapperWrapper Blog</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+    font-family: "Lato", sans-serif;
+    background-color: lightyellow;
+}
+
+.sidenav {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(236, 175, 89);
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #cc10b0;
+    display: block;
+}
+
+.sidenav a:hover {
+    color: #f0b3e7;
+}
+
+.main {
+    margin-left: 160px; /* Same as the width of the sidenav */
+    font-size: 20px; /* Increased text to enable scrolling */
+    padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+</style>
+</head>
 
 <body>
     <p>This is a test post.</p>
+
 <script src="https://utteranc.es/client.js"
     repo="sapperwrapper/sapperwrapper.github.io"
     issue-term="pathname"
@@ -11,3 +57,6 @@
     crossorigin="anonymous"
     async>
 </script>
+
+</body>
+</html>
