--- a/testpost.html
+++ b/testpost.html
@@ -47,6 +47,13 @@ body {
 </head>
 
 <body>
+    <div class="sidenav">
+        <a href="#">Home</a>
+        <a href="blogpage.html">Blog Posts</a>
+        <a href="bookreviewspage.html">Book Reviews</a>
+        <a href="randompage.html">Random</a>
+      </div>
+      
     <p>This is a test post.</p>
 
 <script src="https://utteranc.es/client.js"
