--- a/testpost.html
+++ b/testpost.html
@@ -53,8 +53,10 @@ body {
         <a href="bookreviewspage.html">Book Reviews</a>
         <a href="randompage.html">Random</a>
       </div>
-      
+
+    <div class="main">
     <p>This is a test post.</p>
+    </div>
 
 <script src="https://utteranc.es/client.js"
     repo="sapperwrapper/sapperwrapper.github.io"
