--- a/blogpage.html
+++ b/blogpage.html
@@ -58,7 +58,7 @@ body {
         <h1 style="color: #cc10b0;">Blog Posts</h1>
  
         <p style="font-size: 20px;">
-          <a href="testpost.html" target="_blank">First Blog Post</a>
+          <a href="howtocodeawebsiteforbeginners.html" target="_blank">How to Code a Webside for Beginners</a>
         </p>
 
       <hr>
