--- a/howtocodeawebsiteforbeginners.html
+++ b/howtocodeawebsiteforbeginners.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>SapperWrapper Blog</title>
+<title>How to Code a Website for Beginners</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
