--- a/blogpage.html
+++ b/blogpage.html
@@ -59,6 +59,7 @@ body {
  
         <p style="font-size: 20px;">
           <a href="howtocodeawebsiteforbeginners.html" target="_blank">How to Code Your Own Webside for Beginners</a>
+          <a href="alaskatrip.html" target="_blank">Planning the Perfect Alaska Trip</a>
         </p>
 
       <hr>
