--- a/blogpage.html
+++ b/blogpage.html
@@ -58,7 +58,7 @@ body {
         <h1 style="color: #cc10b0;">Blog Posts</h1>
  
         <p style="font-size: 20px;">
-          <a href="howtocodeawebsiteforbeginners.html" target="_blank">How to Code Your Own Webside for Beginners</a>
+          <a href="howtocodeawebsiteforbeginners.html" target="_blank">How to Code Your Own Webside for Beginners</a><br>
           <a href="alaskatrip.html" target="_blank">Planning the Perfect Alaska Trip</a>
         </p>
 
