--- a/alaskatrip.html
+++ b/alaskatrip.html
@@ -6,7 +6,7 @@
 <style>
 body {
     font-family: "Lato", sans-serif;
-    background-image: linear-gradient(to bottom right, rgb(93, 114, 255), rgb(230, 234, 250));
+    background-image: linear-gradient(to bottom right, rgb(189, 228, 255), rgb(83, 189, 255));
 }
 
 .sidenav {
@@ -45,7 +45,7 @@ body {
     .sidenav a {font-size: 18px;}
 }
 h1 {text-align: center;}
-p {text-align: center;}
+p {text-align: left;}
 div {text-align: center;}
 </style>
 </head>
@@ -59,6 +59,7 @@ div {text-align: center;}
     <h1>Planning the Perfect Alaska Trip:</h1>
     <h2>A Step-by-Step Guide of How I Planned the Family Trip of a Lifetime</h2>
     <h3>By Lora Sapp</h3>
+    <img src="Alaskapano.png" width="100%">
     <p style="margin-left: 250px; margin-right: 250px;">
         My daughter graduated high school in 2022, and for her senior trip, she wanted to go to Alaska with the family. And I can honestly say it was one of the best, 
         most beautiful places I’ve ever been. Here’s how we did it!
@@ -92,11 +93,11 @@ div {text-align: center;}
         <br><br>
         I read that taking the <a href="https://www.alaskarailroad.com/" target="_blank">Alaska Railroad coastal route</a> to Seward was well worth the money so I booked us 
         train tickets, deciding to get a rental car in Seward instead of driving. But, if you are looking to save a little money then rent the car in Anchorage and 
-        drive. It is pretty much the same view the whole time, but I think you miss a lot when driving. NOTE: there is only one car rental in Seward: Hertz. I had 
+        drive. It is pretty much the same view the whole time, but I think you miss a lot when driving. <strong>NOTE: there is only one car rental in Seward: Hertz. I had 
         trouble booking online, so I called them directly to make sure we would have a car and that it would be a small SUV since we had a lot of luggage. The lady 
         was so nice! She took my reservation and promised me there would be no problems. We had to have a rental since our cabin wasn’t in Seward but I think we would 
         have rented one anyway based on what I read. They do have a town shuttle and some car services but not a lot, and I didn’t want to have to worry about trying 
-        to arrange all the rides to and from our excursions.
+        to arrange all the rides to and from our excursions.</strong>
     </p>
     <h2>Day 1</h2>
     <p style="margin-left: 250px; margin-right: 250px;">
@@ -144,10 +145,10 @@ div {text-align: center;}
         brand new Toyota Rav 4 with only 3 miles on it. Then, we drove about a mile to downtown Seward and walked around since we couldn’t check into our rental cabin 
         until 5pm. Weather was 63… I wore leggings and a light shirt with a vest. It was chilly by the water at the harbor but warm downtown.
         <br><br>
-        Safeway is the only grocery store in Seward and surrounding towns, so we shopped there for some food and liquor/wine for the cabin. NOTE: Nothing is cheap 
+        Safeway is the only grocery store in Seward and surrounding towns, so we shopped there for some food and liquor/wine for the cabin. <strong>NOTE: Nothing is cheap 
         when eating out. Even lunch with no alcohol was a minimum $75-80 and dinner with alcohol was $200+. Really good food, just not cheap. So we planned on trying 
         to eat only one meal a day out and eat at the cabin the other meals and it worked out perfectly. That is a huge plus staying in a cabin/house rather than a 
-        hotel.
+        hotel.</strong>
         <br><br>
         When it was time to check into our rental, we drove about 20 miles north, close to a town called Moose Pass where our VRBO cabin was. The cabin was called the 
         <a href="https://www.vrbo.com/988176?adultsCount=3&childrenCount=1&haExternalSourceId=31b8b8b3-33fb-4a58-b6d2-f37cf4f9c0e0%20219ef654-d0c9-438e-abda-7d9926378233%20hasc%20email&unitId=1536132&utm_campaign=VRBO_TRV_PAY_HASC_paymentRequest_PPS&utm_content=listing-id-321.988176.1536132&utm_medium=email&utm_source=SYS&utm_term=20220515" target="_blank">Kenai Cove Cabin</a>, 
@@ -157,9 +158,9 @@ div {text-align: center;}
         into a woody area and then, about 100 yards down, was a small path with a gorgeous panoramic view of the Kenai River with a bench to sit on and a fire pit. The 
         owners left a binder with recommendations of things to do along with the story behind the cabin… So interesting. 
         <br><br>
-        That night, we cooked dinner and enjoyed the views. There is no air conditioning in the cabin, but it is so beautiful with the windows open. NOTE: bring eye 
+        That night, we cooked dinner and enjoyed the views. There is no air conditioning in the cabin, but it is so beautiful with the windows open. <strong>NOTE: bring eye 
         masks to wear at night if you are a light sleeper because it never truly gets dark. There are room darkening curtains, but if you want the fresh air blowing 
-        in, you have to keep those open which obviously lets the sunlight in. Summer Solstice was that day and it didn’t get dark at all! 
+        in, you have to keep those open which obviously lets the sunlight in. Summer Solstice was that day and it didn’t get dark at all!</strong>
     </p>
     <h2>Day 4</h2>
     <p style="margin-left: 250px; margin-right: 250px;">
@@ -176,8 +177,8 @@ div {text-align: center;}
         cute! And the kids and guide were having a snowball throwing contest. Needless to say, we all loved it!
         <br><br>
         Afterwards, we ate lunch at <a href="https://www.rayswaterfront.com/" target="_blank">Rays Waterfront</a> in the harbor and it was very good. We were able to sit by the window overlooking the 
-        harbor so we had a beautiful view. NOTE: places fill up fast there since the cruise ships all dock there and people are constantly coming and going, but the 
-        restaurants all seem to shuffle people through efficiently without making you feel rushed. 
+        harbor so we had a beautiful view. <strong>NOTE: places fill up fast there since the cruise ships all dock there and people are constantly coming and going, but the 
+        restaurants all seem to shuffle people through efficiently without making you feel rushed.</strong>
         <br><br>
         To end the day, we drove back to the cabin and my husband, daughter, and I took a mile hike down by the lake off the backyard… Such beautiful views! And at 
         6:50pm the passenger train that we rode up on passed through right behind the cabin heading to Anchorage. This is the only time we heard the train passing… 
@@ -190,9 +191,9 @@ div {text-align: center;}
         Day 5 was another early day for us. We had a 5:45am wake up call…Ate breakfast, packed a bag, and headed to <a href="https://www.kayakak.com/" target="_blank">Kayak Adventures Worldwide</a> in 
         downtown Seward to meet up for our daylong boat/kayak trip.
         <br><br>
-        At 7:15, we boarded a water taxi and took a 2.5 hour boat ride, seeing sea otters, orcas, and bald eagles! NOTE: boat ride is cold! The boat goes 25-30 MPH so 
+        At 7:15, we boarded a water taxi and took a 2.5 hour boat ride, seeing sea otters, orcas, and bald eagles! <strong>NOTE: boat ride is cold! The boat goes 25-30 MPH so 
         dress in warm layers with gloves and hats. The tour company will provide rain pants and extra layers if you need them. There is a cabin on the boat to go into 
-        to stay warm but you miss some of the views. They provided a light snack (½ muffin) and water, coffee, tea, and hot chocolate.
+        to stay warm but you miss some of the views. </strong>They provided a light snack (½ muffin) and water, coffee, tea, and hot chocolate.
         <br><br>
         After about 2.5 hours, we were dropped off at a beach to get into kayaks. Each kayak holds two people and they provide kayak skirts and paddle gloves. Your 
         body stays pretty dry except your arms get wet from paddling– I don't think you can avoid water sliding down your sleeves. The tour company provided a small 
@@ -206,10 +207,10 @@ div {text-align: center;}
         one position for so long without being able to get out and stretch. There are tours where you stay in the boat the whole time and boat up to the glacier but 
         if your back can handle it, I would recommend kayaking.
         <br><br>
-        NOTE: Pack extra snacks since it is an all day tour and they only provide minimal lunch/snacks. Pack your own water for the kayak rides since they don’t 
+        <strong>NOTE: Pack extra snacks since it is an all day tour and they only provide minimal lunch/snacks. Pack your own water for the kayak rides since they don’t 
         provide extras. Pack an extra shirt/sweatshirt because your upper body will get wet from paddling the kayaks and it would make the boat ride back more 
         comfortable to get out of the wet shirts. You can leave your belongings on the water taxi while you kayak so bring whatever you think you may need and that 
-        way you are prepared even if you end up not using it all… We didn’t have spare clothing so we were pretty uncomfortable on the way home.
+        way you are prepared even if you end up not using it all… We didn’t have spare clothing so we were pretty uncomfortable on the way home.</strong>
         <br><br>
         On our way back to the cabin a moose ran across the road right in front of us! I knew we would be wet and tired and want to get back to the cabin, so we 
         previously bought frozen Digiorno pizza to have once we go back to the cabin… Nice and easy. Worked out perfectly.
@@ -220,9 +221,9 @@ div {text-align: center;}
         for my husband and the kids to zipline. It was a three hour activity with 8 ziplines, 2 suspension bridges and 2 rapplings. They had a great time!
         <br><br>
         Since I don’t do heights, I chose to stay back in town and walked around the harbor, then walked the mile to downtown Seward and back. It was actually the 
-        original first mile of the Iditarod race! I just took my time and sat on a bench by the water and read… Very peaceful. NOTE: it was 62… cold/windy by the 
+        original first mile of the Iditarod race! I just took my time and sat on a bench by the water and read… Very peaceful. <strong>NOTE: it was 62… cold/windy by the 
         water…I was in light pants, long sleeve light shirt and rain jacket and was cold when by the water, but ziplining they were comfortable in light pants and 
-        light sweatshirts.
+        light sweatshirts.</strong>
         <br><br>
         We went back to the cabin for lunch and walked on the beach behind the cabin and then just relaxed on the back porch until getting ready for dinner. For 
         dinner, we went to Seward to eat at <a href="https://www.chinooksak.com/" target="_blank">Chinooks Restaurant</a>. It was very good. The kids had the crab cakes for an appetizer and really 
@@ -255,7 +256,7 @@ div {text-align: center;}
         not a threat so we didn’t need to use the bear spray.
         <br><br>
 
-        NOTES: Dress in light layers. It was chilly when we started but got warm pretty quickly. By the first mile up I was in a tank and shorts. (FYI: I purchased 
+        <strong>NOTES: Dress in light layers. It was chilly when we started but got warm pretty quickly. By the first mile up I was in a tank and shorts. (FYI: I purchased 
         lightweight water resistant cargo pants off Amazon where the legs zipped off making them shorts and they were great! I wore them most days. I bought three 
         different colors and Taylor and I switched off wearing them. The only time I needed to make them shorts was on the hike. I bought my husband’s from Academy 
         Sports, and he too unzipped the legs on the hike. My son, ever the teenager, would not be caught dead in zip off pants, so he had to suffer with long pants 
@@ -268,7 +269,7 @@ div {text-align: center;}
         in the climb down.
         <br>
         Pack plenty of water!! We ran out before we made it to the second lookout. If you have a portable water bottle filter, bring it that way you can fill up your 
-        water from the streams. Make sure you eat a good meal beforehand and bring snacks. Lastly, bring a lot of bug spray.
+        water from the streams. Make sure you eat a good meal beforehand and bring snacks. Lastly, bring a lot of bug spray.</strong>
         <br><br>
 
         We went back into town and ate at Rays again for dinner… It was just okay, our lunch the other day there was better. We stopped at Safeway and bought 
@@ -313,9 +314,9 @@ div {text-align: center;}
     </p>
     <h2>Day 10</h2>
     <p style="margin-left: 250px; margin-right: 250px;">
-        On our last day, we ate breakfast, packed up, and checked out of the house at 10. NOTE: if it weren’t for the first cabin being booked we would have 
+        On our last day, we ate breakfast, packed up, and checked out of the house at 10. <strong>NOTE: if it weren’t for the first cabin being booked we would have 
         stayed there the whole time and did a rafting/floating trip out of Seward and maybe would have just taken a day trip to Cooper Landing to see the salmon 
-        jumping etc. It really wasn’t worth staying in Cooper Landing, but we had a great time no matter what.
+        jumping etc. It really wasn’t worth staying in Cooper Landing, but we had a great time no matter what.</strong>
         <br><br>
         On our drive to Anchorage we made a pit stop halfway and went to the <a href="https://alaskawildlife.org/" target="_blank">Alaska Wildlife Conservation center</a> 
         We were glad we did. It was a 1.5 mile loop that you could drive or walk (we walked, as did most) and we pretty much saw every wildlife life animal in Alaska… 
